--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
@@ -40,26 +40,25 @@ Bun 1.0 https://twitter.com/jarredsumner/status/1693657906917585359 + Astro 3.0 
 
 ---
 
-- Gatsby https://twitter.com/FredKSchott/status/1693007599803752638
-- [Implement Radix's asChild pattern in React](https://www.jacobparis.com/content/react-as-child)
-- [The underlying mechanisms of React’s concurrent mode](https://b8505d53.andreigatej-dev-new.pages.dev/blog/the-underlying-mechanisms-of-reacts-concurrent-mode/)
-- RSC DevTools Extension - https://twitter.com/alvarlagerlof/status/1692998609501864167
-- Validation??? https://twitter.com/notphanan/status/1693608959251251494
-- NextUI 2.1 https://twitter.com/getnextui/status/1693608395297669199
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- [Next.Js 13 Parallel Routes: A Comprehensive Guide](https://hackernoon.com/nextjs-13-parallel-routes-a-comprehensive-guide)
-- [useMemo overdose](https://edvins.io/usememo-overdose)
-- [How to solve hydration error in Next.js](https://chirag-gupta.hashnode.dev/how-to-solve-hydration-error-in-nextjs)
-- [React Jam - Summer 2023 Winners](https://reactjam.com/summer-2023-winners)
-- [Fresh 1.4 – Faster Page Loads, Layouts and More](https://deno.com/blog/fresh-1.4)
-- [A11y-Driven Development](https://www.simplethread.com/a11y-driven-development/)
-- [React Suspense in three different architectures](https://elanmed.dev/blog/suspense-in-different-architectures)
-- [Using PostHog with the Next.js App Router and Vercel](https://vercel.com/guides/posthog-nextjs-vercel-feature-flags-analytics)
-- [Remotion Lambda Tutorial](https://www.youtube.com/playlist?list=PLRHdymbhXiIRgAeAUpMxe7l7BNliHfWUq)
-- [TinyBase 4.1](https://tinybase.org/guides/releases/)
-- [tRPC + NextJS App Router = Simple Typesafe APIs](https://www.youtube.com/watch?v=qCLV0Iaq9zU)
+- 🎮 [React Jam - Summer 2023 Winners](https://reactjam.com/summer-2023-winners)
+- 📜 [Implement Radix's asChild pattern in React](https://www.jacobparis.com/content/react-as-child)
+- 📜 [The underlying mechanisms of React’s concurrent mode](https://b8505d53.andreigatej-dev-new.pages.dev/blog/the-underlying-mechanisms-of-reacts-concurrent-mode/)
+- 📜 [Next.Js 13 Parallel Routes: A Comprehensive Guide](https://hackernoon.com/nextjs-13-parallel-routes-a-comprehensive-guide)
+- 📜 [useMemo overdose](https://edvins.io/usememo-overdose)
+- 📜 [How to solve hydration error in Next.js](https://chirag-gupta.hashnode.dev/how-to-solve-hydration-error-in-nextjs)
+- 📜 [A11y-Driven Development](https://www.simplethread.com/a11y-driven-development/)
+- 📜 [React Suspense in three different architectures](https://elanmed.dev/blog/suspense-in-different-architectures)
+- 📜 [Using PostHog with the Next.js App Router and Vercel](https://vercel.com/guides/posthog-nextjs-vercel-feature-flags-analytics)
+- 📦 [React Server Component Devtools](https://chrome.google.com/webstore/detail/rsc-devtools/jcejahepddjnppkhomnidalpnnnemomn): l'extension est maintenant disponible sur le store Chrome. Lisez [cet article](https://www.alvar.dev/blog/creating-devtools-for-react-server-components) pour en savoir plus.
+- 📦 [Fresh 1.4 – Faster Page Loads, Layouts and More](https://deno.com/blog/fresh-1.4)
+- 📦 [TinyBase 4.1](https://tinybase.org/guides/releases/)
+- 📦 [NextUI 2.1](https://nextui.org/blog/v2.1.0)
+- 🎥 [tRPC + NextJS App Router = Simple Typesafe APIs](https://www.youtube.com/watch?v=qCLV0Iaq9zU)
+- 🎥 [Remotion Lambda - Tutorial Playlist](https://www.youtube.com/playlist?list=PLRHdymbhXiIRgAeAUpMxe7l7BNliHfWUq)
+- 🎥 [React Query is Secretly an Amazing State Manager](https://www.youtube.com/watch?v=0X3TlVklT-A)
 
-  <SubscribeFormEmbed placement="middle" />
+<SubscribeFormEmbed placement="middle" />
 
 ---
 
@@ -85,20 +84,20 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 📱 React-Native {#react-native}
 
-- https://twitter.com/ReactNativeRdio/status/1694104282126241859
+- 💬 [React-Native-Testing-Library RFC - Jest Native matchers migration](https://github.com/callstack/react-native-testing-library/issues/1468) https://twitter.com/mdj_dev/status/1693949809181286557
 - top100 sport https://twitter.com/Baconbrix/status/1692215896029212847
-- [react-native-worklets-core](https://github.com/margelo/react-native-worklets-core) https://twitter.com/mrousavy/status/1693556649674277265
-- clean rn - https://twitter.com/mrousavy/status/1693565162169512403
 - Local modules https://twitter.com/SzymonRybczak/status/1693628271269654858
-- [Preview - Static Font Optimization with Expo Router!](https://twitter.com/Baconbrix/status/1692990529800167441)
-- [react-native-bootsplash 5.0.0](https://github.com/zoontek/react-native-bootsplash/releases/tag/5.0.0) https://twitter.com/zoontek/status/1693916894225432998
-- [react-native-fast-tflite - High-performance TensorFlow Lite with GPU acceleration](https://github.com/mrousavy/react-native-fast-tflite) - https://twitter.com/mrousavy/status/1693935706593255529
-- [Simplify Your iOS Brownfield Integration with React Native Host](https://www.callstack.com/blog/simplify-your-ios-brownfield-integration-with-react-native-host)
-- [Realm JavaScript v12: complete rewrite without surprises](https://medium.com/realm/realm-javascript-v12-complete-rewrite-without-surprises-62eea2a2e8ae)
+- 👀 [Preview - Static Font Optimization with Expo Router!](https://twitter.com/Baconbrix/status/1692990529800167441)
+- 📜 [Simplify Your iOS Brownfield Integration with React Native Host](https://www.callstack.com/blog/simplify-your-ios-brownfield-integration-with-react-native-host)
+- 📦 [react-native-worklets-core](https://github.com/margelo/react-native-worklets-core) https://twitter.com/mrousavy/status/1693556649674277265
+- 📦 [react-native-fast-tflite - High-performance TensorFlow Lite with GPU acceleration](https://github.com/mrousavy/react-native-fast-tflite) - https://twitter.com/mrousavy/status/1693935706593255529
+- 📦 [react-native-bootsplash 5.0.0](https://github.com/zoontek/react-native-bootsplash/releases/tag/5.0.0) https://twitter.com/zoontek/status/1693916894225432998
+- 📦 [clean-rn - Clean all React Native caches](https://github.com/mrousavy/clean-rn)
+- 📦 [Realm JavaScript v12: complete rewrite without surprises](https://medium.com/realm/realm-javascript-v12-complete-rewrite-without-surprises-62eea2a2e8ae)
+- 🎥 [Instagram Stickers - “Can it be done in React Native?”](https://www.youtube.com/watch?v=5yM4NPcTwY4)
+- 🎥 [Flutter vs React Native and Reanimated with @Reactiive](https://www.youtube.com/watch?v=A19-UEUrg6A)
+- 🎙️ [React Native Radio 273 - Gluestack with Sanket Sahu](https://react-native-radio.simplecast.com/episodes/rnr-273-gluestack-with-sanket-sahu)
 - 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, 7–8 September 2023) nous offre [-15% sur la conférence](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) avec le code "thisweekinreact15".
-- [Flutter vs React Native and Reanimated with @Reactiive](https://www.youtube.com/watch?v=A19-UEUrg6A)
-- [React-Native-Testing-Library RFC - Jest Native matchers migration](https://github.com/callstack/react-native-testing-library/issues/1468) https://twitter.com/mdj_dev/status/1693949809181286557
-- [Instagram Stickers - “Can it be done in React Native?”](https://www.youtube.com/watch?v=5yM4NPcTwY4)
 
 <Todo />
 
@@ -106,9 +105,10 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 🇫🇷 En français {#fr}
 
-- [Je Regrette de ne pas avoir connu ces 3 Tricks React avant](https://www.youtube.com/watch?v=taw7AYTN0ds)
-- [Comment diagnostiquer et corriger du Cumulative Layout Shift (CLS) ?](https://www.julienpradet.fr/tutoriels/comment-detecter-du-cls/)
-- [Des styles différents pour des états différents](https://www.swebdev.fr/blog/des-styles-differents-pour-des-etats-differents)
+- 📜 [Comment diagnostiquer et corriger du Cumulative Layout Shift (CLS) ?](https://www.julienpradet.fr/tutoriels/comment-detecter-du-cls/)
+- 📜 [Des styles différents pour des états différents](https://www.swebdev.fr/blog/des-styles-differents-pour-des-etats-differents)
+- 🎥 [Je Regrette de ne pas avoir connu ces 3 Tricks React avant](https://www.youtube.com/watch?v=taw7AYTN0ds)
+- 🎥 [NextJS App : SEO, Sitemap, Metadata...](https://www.youtube.com/watch?v=QeascD-piHA)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -123,16 +123,13 @@ Nous intervenons en développement, conseil, audit ou formation, sur des thémat
 
 ## 🔀 Autre {#other}
 
-- [Shadow DOM: Not by Default](https://begin.com/blog/posts/2023-08-18-shadow-dom-not-by-default)
-- [Dropbox - How we reduced the size of our JavaScript bundles by 33%](https://dropbox.tech/frontend/how-we-reduced-the-size-of-our-javascript-bundles-by-33-percent)
-- [Four new CSS features for smooth entry and exit animations](https://developer.chrome.com/blog/entry-exit-animations/)
-- [Chrome 117 Beta](https://developer.chrome.com/blog/chrome-117-beta/)
-- [Val Town Runtime v3 – My mistakes were easy, the solutions simple](https://blog.val.town/blog/val-town-runtime-v3-my-mistakes-were-easy-the-solutions-simple)
-- [Atropos - Stunning touch-friendly 3D parallax hover effects](https://atroposjs.com/)
-- [The ideal viewport doesn’t exist](https://viewports.fyi/)
-- [Upcoming Node 20.6 - built-in .env file support](https://github.com/nodejs/node/pull/49185)
-- [TypeScript is Surprisingly OK for Compilers](https://matklad.github.io/2023/08/17/typescript-is-surprisingly-ok-for-compilers.html)
-- [Solid 0.3.1](https://github.com/solidjs/solid-start/releases/tag/v0.3.1)
+- 📜 [Shadow DOM: Not by Default](https://begin.com/blog/posts/2023-08-18-shadow-dom-not-by-default)
+- 📜 [Dropbox - How we reduced the size of our JavaScript bundles by 33%](https://dropbox.tech/frontend/how-we-reduced-the-size-of-our-javascript-bundles-by-33-percent)
+- 📜 [Four new CSS features for smooth entry and exit animations](https://developer.chrome.com/blog/entry-exit-animations/)
+- 📜 [The ideal viewport doesn’t exist](https://viewports.fyi/)
+- 📜 [TypeScript is Surprisingly OK for Compilers](https://matklad.github.io/2023/08/17/typescript-is-surprisingly-ok-for-compilers.html)
+- 👀 [Upcoming Node 20.6 - built-in .env file support](https://github.com/nodejs/node/pull/49185)
+- 📦 [Chrome 117 Beta](https://developer.chrome.com/blog/chrome-117-beta/)
 
 ---
 
