--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
@@ -8,6 +8,8 @@ unlisted: true
 
 Salut à tous !
 
+Ob devrait prochainement avoir quelques belles sorties: [🐦 Bun 1.0](https://twitter.com/jarredsumner/status/1693657906917585359), [🐦 Astro 3.0](https://twitter.com/astrodotbuild/status/1693655809711108456) et [🐦 TanStack Router](https://twitter.com/tannerlinsley/status/1691936709498552654)
+
 <Todo />
 
 <!-- truncate -->
@@ -33,12 +35,6 @@ Managing or migrating large apps and codebases? This video course covers what yo
 ---
 
 ## ⚛️ React {#react}
-
-Bun 1.0 https://twitter.com/jarredsumner/status/1693657906917585359 + Astro 3.0 upcoming https://twitter.com/astrodotbuild/status/1693655809711108456
-
-- [Array Types in TypeScript](https://tkdodo.eu/blog/array-types-in-type-script) + https://twitter.com/mattpocockuk/status/1693951467479093431
-
----
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
 - 🎮 [React Jam - Summer 2023 Winners](https://reactjam.com/summer-2023-winners)
@@ -123,6 +119,7 @@ Nous intervenons en développement, conseil, audit ou formation, sur des thémat
 
 ## 🔀 Autre {#other}
 
+- 📜 [`Array<T>` vs `T[]`: Which is better?](https://www.totaltypescript.com/array-types-in-typescript)
 - 📜 [Shadow DOM: Not by Default](https://begin.com/blog/posts/2023-08-18-shadow-dom-not-by-default)
 - 📜 [Dropbox - How we reduced the size of our JavaScript bundles by 33%](https://dropbox.tech/frontend/how-we-reduced-the-size-of-our-javascript-bundles-by-33-percent)
 - 📜 [Four new CSS features for smooth entry and exit animations](https://developer.chrome.com/blog/entry-exit-animations/)
