--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
@@ -37,19 +37,18 @@ Managing or migrating large apps and codebases? This video course covers what yo
 ## ⚛️ React {#react}
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- 🎮 [React Jam - Summer 2023 Winners](https://reactjam.com/summer-2023-winners)
-- 📜 [Implement Radix's asChild pattern in React](https://www.jacobparis.com/content/react-as-child)
-- 📜 [The underlying mechanisms of React’s concurrent mode](https://b8505d53.andreigatej-dev-new.pages.dev/blog/the-underlying-mechanisms-of-reacts-concurrent-mode/)
-- 📜 [Next.Js 13 Parallel Routes: A Comprehensive Guide](https://hackernoon.com/nextjs-13-parallel-routes-a-comprehensive-guide)
-- 📜 [useMemo overdose](https://edvins.io/usememo-overdose)
-- 📜 [How to solve hydration error in Next.js](https://chirag-gupta.hashnode.dev/how-to-solve-hydration-error-in-nextjs)
-- 📜 [A11y-Driven Development](https://www.simplethread.com/a11y-driven-development/)
-- 📜 [React Suspense in three different architectures](https://elanmed.dev/blog/suspense-in-different-architectures)
+- 🎮 [React Jam - Summer 2023 Winners](https://reactjam.com/summer-2023-winners): concours de jeux videos créés avec React, dont j'étais membre du jury.
+- 📜 [The underlying mechanisms of React’s concurrent mode](https://andreigatej.dev/blog/the-underlying-mechanisms-of-reacts-concurrent-mode/): article technique qui étudie le code React. Explique bien le fonctionnement de `startTransition` et sa différence avec le mode de rendering synchrone. J'ai appris comment React utilise l'API `MessageChannel` récursivement pour redonner périodiquement la main au thread principal.
+- 📜 [Implement Radix's asChild pattern in React](https://www.jacobparis.com/content/react-as-child): explique le fonctionnement du pattern `asChild` popularisé par Radix comme une bonne alternative à la props `as` pour customiser le composant sous-jacent utilisé par une librairie.
+- 📜 [A11y-Driven Development](https://www.simplethread.com/a11y-driven-development/): propose de découper et nommer les composants React selon leur rôle d'accessibilité.
+- 📜 [React Suspense in three different architectures](https://elanmed.dev/blog/suspense-in-different-architectures): présente 4 cas d'usages différent de `<Suspense>` pour 3 architectures différences (CSR, SSR, RSC).
+- 📜 [How to solve hydration error in Next.js](https://chirag-gupta.hashnode.dev/how-to-solve-hydration-error-in-nextjs): met en avant quelques problèmes courants qui peuvent conduire à des problèmes d'hydratation, comme l'usage d'API browser type `localStorage` pour initialiser votre state, ou encore utiliser un markup HTML invalide.
 - 📜 [Using PostHog with the Next.js App Router and Vercel](https://vercel.com/guides/posthog-nextjs-vercel-feature-flags-analytics)
-- 📦 [React Server Component Devtools](https://chrome.google.com/webstore/detail/rsc-devtools/jcejahepddjnppkhomnidalpnnnemomn): l'extension est maintenant disponible sur le store Chrome. Lisez [cet article](https://www.alvar.dev/blog/creating-devtools-for-react-server-components) pour en savoir plus.
+- 📜 [useMemo overdose](https://edvins.io/usememo-overdose)
+- 📦 [RSC Devtools - Chrome Extension](https://chrome.google.com/webstore/detail/rsc-devtools/jcejahepddjnppkhomnidalpnnnemomn): cette extension non-officielle est maintenant disponible sur le store Chrome. Elle vous permet d'analyser une timeline des payloads RSC dans le temps. Relisez l'article [Devtools for React Server Components](https://www.alvar.dev/blog/creating-devtools-for-react-server-components) pour en savoir plus.
 - 📦 [Fresh 1.4 – Faster Page Loads, Layouts and More](https://deno.com/blog/fresh-1.4)
-- 📦 [TinyBase 4.1](https://tinybase.org/guides/releases/)
-- 📦 [NextUI 2.1](https://nextui.org/blog/v2.1.0)
+- 📦 [TinyBase 4.1 - New ui-react-dom module](https://tinybase.org/guides/releases/)
+- 📦 [NextUI 2.1 - Select, Listbox, ScrollShadow](https://nextui.org/blog/v2.1.0)
 - 🎥 [tRPC + NextJS App Router = Simple Typesafe APIs](https://www.youtube.com/watch?v=qCLV0Iaq9zU)
 - 🎥 [Remotion Lambda - Tutorial Playlist](https://www.youtube.com/playlist?list=PLRHdymbhXiIRgAeAUpMxe7l7BNliHfWUq)
 - 🎥 [React Query is Secretly an Amazing State Manager](https://www.youtube.com/watch?v=0X3TlVklT-A)
@@ -80,16 +79,16 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 📱 React-Native {#react-native}
 
-- 💬 [React-Native-Testing-Library RFC - Jest Native matchers migration](https://github.com/callstack/react-native-testing-library/issues/1468) https://twitter.com/mdj_dev/status/1693949809181286557
-- top100 sport https://twitter.com/Baconbrix/status/1692215896029212847
-- Local modules https://twitter.com/SzymonRybczak/status/1693628271269654858
-- 👀 [Preview - Static Font Optimization with Expo Router!](https://twitter.com/Baconbrix/status/1692990529800167441)
+- 💬 [React-Native RFC - Autolinking local modules](https://github.com/react-native-community/discussions-and-proposals/pull/702): propose de faciliter la création de modules natifs locaux, dans un dossier `local_modules`, via le CLI `create-react-native-library`
+- 💬 [React-Native-Testing-Library RFC - Jest Native matchers migration](https://github.com/callstack/react-native-testing-library/issues/1468)
+- 🐦 [The top 100 Sports apps in the Apple App Store - React-Native 33/100](https://twitter.com/Baconbrix/status/1692215896029212847)
+- 👀 [Expo Preview - Static Font Optimization with Expo Router](https://twitter.com/Baconbrix/status/1692990529800167441)
 - 📜 [Simplify Your iOS Brownfield Integration with React Native Host](https://www.callstack.com/blog/simplify-your-ios-brownfield-integration-with-react-native-host)
-- 📦 [react-native-worklets-core](https://github.com/margelo/react-native-worklets-core) https://twitter.com/mrousavy/status/1693556649674277265
+- 📦 [react-native-worklets-core](https://github.com/margelo/react-native-worklets-core): un exécuteur de worklet, inspiré de celui de Reanimated 2+, et destiné à être utilisé par diverses librairies comme VisionCamera, WishList et Skia. https://twitter.com/mrousavy/status/1693556649674277265
 - 📦 [react-native-fast-tflite - High-performance TensorFlow Lite with GPU acceleration](https://github.com/mrousavy/react-native-fast-tflite) - https://twitter.com/mrousavy/status/1693935706593255529
-- 📦 [react-native-bootsplash 5.0.0](https://github.com/zoontek/react-native-bootsplash/releases/tag/5.0.0) https://twitter.com/zoontek/status/1693916894225432998
-- 📦 [clean-rn - Clean all React Native caches](https://github.com/mrousavy/clean-rn)
 - 📦 [Realm JavaScript v12: complete rewrite without surprises](https://medium.com/realm/realm-javascript-v12-complete-rewrite-without-surprises-62eea2a2e8ae)
+- 📦 [react-native-bootsplash 5.0.0 - Dark mode, Brand image, Web support...](https://github.com/zoontek/react-native-bootsplash/releases/tag/5.0.0)
+- 📦 [clean-rn - Clean all React Native caches](https://github.com/mrousavy/clean-rn)
 - 🎥 [Instagram Stickers - “Can it be done in React Native?”](https://www.youtube.com/watch?v=5yM4NPcTwY4)
 - 🎥 [Flutter vs React Native and Reanimated with @Reactiive](https://www.youtube.com/watch?v=A19-UEUrg6A)
 - 🎙️ [React Native Radio 273 - Gluestack with Sanket Sahu](https://react-native-radio.simplecast.com/episodes/rnr-273-gluestack-with-sanket-sahu)
@@ -119,13 +118,14 @@ Nous intervenons en développement, conseil, audit ou formation, sur des thémat
 
 ## 🔀 Autre {#other}
 
+- 👀 [Upcoming Node 20.6 - built-in .env file support](https://github.com/nodejs/node/pull/49185)
+- 🐦 [requestIdleCallback coming to Safari and soon in every browser?](https://twitter.com/sebastienlorber/status/1694260312986227187)
 - 📜 [`Array<T>` vs `T[]`: Which is better?](https://www.totaltypescript.com/array-types-in-typescript)
 - 📜 [Shadow DOM: Not by Default](https://begin.com/blog/posts/2023-08-18-shadow-dom-not-by-default)
 - 📜 [Dropbox - How we reduced the size of our JavaScript bundles by 33%](https://dropbox.tech/frontend/how-we-reduced-the-size-of-our-javascript-bundles-by-33-percent)
 - 📜 [Four new CSS features for smooth entry and exit animations](https://developer.chrome.com/blog/entry-exit-animations/)
 - 📜 [The ideal viewport doesn’t exist](https://viewports.fyi/)
 - 📜 [TypeScript is Surprisingly OK for Compilers](https://matklad.github.io/2023/08/17/typescript-is-surprisingly-ok-for-compilers.html)
-- 👀 [Upcoming Node 20.6 - built-in .env file support](https://github.com/nodejs/node/pull/49185)
 - 📦 [Chrome 117 Beta](https://developer.chrome.com/blog/chrome-117-beta/)
 
 ---
