--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /157
-title: "React Hebdo #157: Concurrent Mode, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, Autolinking, Realm, Bootsplash ... "
+title: "React Hebdo #157: Concurrent Mode, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, Autolinking, Realm, Bootsplash..."
 authors: [slorber]
 date: 08-22-2023
 unlisted: true
@@ -10,9 +10,9 @@ Salut à tous !
 
 C'est assez calme coté React cette semaine, mais on a tout de même quelques articles sympa à lire.
 
-Coté React-Native, Marc Rousavy est en feu et publie de nombreux packages quoi annoncent sans doute l'arrivée prochaine de VisionCamera v3.
+Coté React-Native, Marc Rousavy est en feu et publie de nombreux packages qui semblent annoncer l'arrivée prochaine de VisionCamera v3.
 
-On devrait prochainement avoir quelques belles sorties: [🐦 Bun 1.0](https://twitter.com/jarredsumner/status/1693657906917585359), [🐦 Astro 3.0](https://twitter.com/astrodotbuild/status/1693655809711108456) et [🐦 TanStack Router](https://twitter.com/tannerlinsley/status/1691936709498552654)
+On devrait prochainement avoir quelques belles sorties, comme [🐦 Bun 1.0](https://twitter.com/jarredsumner/status/1693657906917585359), [🐦 Astro 3.0](https://twitter.com/astrodotbuild/status/1693655809711108456) et [🐦 TanStack Router](https://twitter.com/tannerlinsley/status/1691936709498552654).
 
 Je prends une petite pause la semaine prochaine, on se retrouve le 6 septembre 👋
 
