--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /157
-title: "React Hebdo #157: Concurrent Mode, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, Autolinking, Realm, Bootsplash..."
+title: "React Hebdo #157: Concurrent Mode, RSC DevTools Extension, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, Autolinking, Bootsplash..."
 authors: [slorber]
 date: 08-22-2023
 unlisted: true
@@ -90,7 +90,7 @@ Click the link and [get $1 off your next domain name registration](https://pork
 
 ## 📱 React-Native {#react-native}
 
-- 💬 [React-Native RFC - Autolinking local modules](https://github.com/react-native-community/discussions-and-proposals/pull/702): propose de faciliter la création de modules natifs locaux, dans un dossier `local_modules`, via le CLI `create-react-native-library`
+- 💬 [React-Native RFC - Autolinking local modules](https://github.com/react-native-community/discussions-and-proposals/pull/702): propose de faciliter la création de modules natifs locaux, dans un dossier `local_modules`, via le CLI `create-react-native-library`.
 - 💬 [React-Native-Testing-Library RFC - Jest Native matchers migration](https://github.com/callstack/react-native-testing-library/issues/1468)
 - 🐦 [The top 100 Sports apps in the Apple App Store - React-Native 33/100](https://twitter.com/Baconbrix/status/1692215896029212847)
 - 👀 [Expo Preview - Static Font Optimization with Expo Router](https://twitter.com/Baconbrix/status/1692990529800167441)
