--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /157
-title: "React Hebdo #157: Concurrent Mode, RSC DevTools Extension, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, Autolinking, Bootsplash..."
+title: "React Hebdo #157: Concurrent Mode, RSC DevTools Extension, Gatsby, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, local_modules, Bootsplash..."
 authors: [slorber]
 date: 08-22-2023
 ---
@@ -48,6 +48,7 @@ Un article technique, mais pédagogique qui étudie le code React. Explique bien
 ---
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
+- 🐦 [Is Gatsby Dead?](https://twitter.com/sebastienlorber/status/1694392101281190224)
 - 🎮 [React Jam - Summer 2023 Winners](https://reactjam.com/summer-2023-winners): concours de jeux videos créés avec React, dont j'étais membre du jury.
 - 📜 [Implement Radix's asChild pattern in React](https://www.jacobparis.com/content/react-as-child): explique le fonctionnement du pattern `asChild` popularisé par Radix comme une bonne alternative à la props `as` pour customiser le composant sous-jacent utilisé par une librairie.
 - 📜 [A11y-Driven Development](https://www.simplethread.com/a11y-driven-development/): propose de découper et nommer les composants React selon leur rôle d'accessibilité.
