--- a/website/newsletter/157/index.mdx
+++ b/website/newsletter/157/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /157
-title: "This Week In React #157: Concurrent Mode, RSC DevTools Extension, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, Autolinking, Bootsplash..."
+title: "This Week In React #157: Concurrent Mode, RSC DevTools Extension, Gatsby, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, local_modules, Bootsplash..."
 authors: [slorber]
 date: 08-22-2023
 ---
@@ -48,6 +48,7 @@ A quite technical but greatly educational article that study the React codebase.
 ---
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
+- 🐦 [Is Gatsby Dead?](https://twitter.com/sebastienlorber/status/1694392101281190224)
 - 🎮 [React Jam - Summer 2023 Winners](https://reactjam.com/summer-2023-winners): the React-based video games creation challenge for which I was a member of the jury, just announced the winners.
 - 📜 [Implement Radix's asChild pattern in React](https://www.jacobparis.com/content/react-as-child): explains how the `asChild` pattern, popularised by Radix, works as a good alternative to the `as` props for customising the underlying component.
 - 📜 [A11y-Driven Development](https://www.simplethread.com/a11y-driven-development/): interesting proposal to split and name React components according to their accessibility role.
