--- a/website/newsletter/157/index.mdx
+++ b/website/newsletter/157/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /157
-title: "This Week In React #157: Concurrent Mode, RSC DevTools Extension, Gatsby, Radix asChild, Suspense, hydration, useMemo, Fresh, TinyBase, Worklets, TFLite, local_modules, Bootsplash..."
+title: "This Week In React #157: Concurrent Mode, RSC DevTools Extension, Gatsby, Radix asChild, Suspense, hydration, useMemo, React-Redux, Fresh, TinyBase, Worklets, TFLite, local_modules, Bootsplash..."
 authors: [slorber]
 date: 08-22-2023
 ---
@@ -60,6 +60,7 @@ A quite technical but greatly educational article that study the React codebase.
 - 📦 [Fresh 1.4 – Faster Page Loads, Layouts and More](https://deno.com/blog/fresh-1.4)
 - 📦 [TinyBase 4.1 - New ui-react-dom module](https://tinybase.org/guides/releases/)
 - 📦 [NextUI 2.1 - Select, Listbox, ScrollShadow](https://nextui.org/blog/v2.1.0)
+- 📦 [React-Redux 9.0 alpha](https://github.com/reduxjs/react-redux/releases/tag/v9.0.0-alpha.0)
 - 🎥 [tRPC + NextJS App Router = Simple Typesafe APIs](https://www.youtube.com/watch?v=qCLV0Iaq9zU)
 - 🎥 [Remotion Lambda - Tutorial Playlist](https://www.youtube.com/playlist?list=PLRHdymbhXiIRgAeAUpMxe7l7BNliHfWUq)
 - 🎥 [React Query is Secretly an Amazing State Manager](https://www.youtube.com/watch?v=0X3TlVklT-A)
