--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/157/index.mdx
@@ -48,7 +48,7 @@ Un article technique, mais pédagogique qui étudie le code React. Explique bien
 ---
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- 🐦 [Is Gatsby Dead?](https://twitter.com/sebastienlorber/status/1694392101281190224)
+- 🐦 [Is Gatsby Dead?](https://twitter.com/sebastienlorber/status/1694392101281190224): pas officiellement, mais son avenir semble assez incertain.
 - 🎮 [React Jam - Summer 2023 Winners](https://reactjam.com/summer-2023-winners): concours de jeux videos créés avec React, dont j'étais membre du jury.
 - 📜 [Implement Radix's asChild pattern in React](https://www.jacobparis.com/content/react-as-child): explique le fonctionnement du pattern `asChild` popularisé par Radix comme une bonne alternative à la props `as` pour customiser le composant sous-jacent utilisé par une librairie.
 - 📜 [A11y-Driven Development](https://www.simplethread.com/a11y-driven-development/): propose de découper et nommer les composants React selon leur rôle d'accessibilité.
