--- a/website/newsletter/158/index.mdx
+++ b/website/newsletter/158/index.mdx
@@ -38,6 +38,7 @@ React makes it painless to create interactive UIs. Design simple views for each 
 
 <Todo />
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
+- [ReactJS Day, Octobre 27, 2023] is offering us [-10% on conference tickets](https://2023.reactjsday.it/index.html) with code  "media_TWIR"
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -58,6 +59,7 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 ## 📱 React-Native {#react-native}
 
 <Todo />
+
 - 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, September 7–8, 2023) is offering us [-15% on conference tickets](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) with code "thisweekinreact15".
 
 ---
